fixed collapse's problem

--- a/src/components/ChatComponents/ChatItemDisplay.css
+++ b/src/components/ChatComponents/ChatItemDisplay.css
@@ -74,6 +74,7 @@
   background-color: transparent;
   flex-direction: row-reverse;
   padding: 10px;
+  border: 0;
 }
 
 #uploadOptions .icon_circle {
